<resources>
    <string name="center_text">Center Text</string>
    <string name="edit_text_hint">Enter something here</string>
    <string name="button_right">Right Button</string>
    <string name="button_left">Left Button</string>
    <string name="bottom_text">Bottom Text</string>
    <string name="right_text">Right Text</string>
    <string name="left_text">Left Text</string>
    <string name="top_text">Top Text</string>
    <string name="button_text">Click Me</string>
    <string name="enter_here">Enter here</string>
    <string name="enter_something">Enter Something </string>
    <string name="welcome_to_this_class">Welcome to this clsss</string>
    <string name="app_name">AndroidTutorial_01</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
</resources>
