<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="#00FFFF"
    android:keepScreenOn="true">

    <!--<TextView
        android:id="@+id/text_view"
        android:text="@string/welcome_to_this_class"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_mysize"
        />

    <EditText
        android:layout_below="@id/text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_text"
        android:hint="@string/enter_something"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_text"
        android:text="@string/button_text"
        android:layout_centerHorizontal="true"
        android:onClick="clickMe"
        />-->

    <TextView
        android:id="@+id/top_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/top_text"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/top_text_size"/>

    <TextView
        android:id="@+id/left_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/left_text"
        android:layout_below="@id/top_text"
        android:layout_alignParentLeft="true"
        android:textSize="@dimen/left_text_size"
        />
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/top_text"
    android:layout_centerHorizontal="true"
    android:text="CENTER"
    android:id="@+id/center_text"/>


    <TextView
        android:id="@+id/right_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/right_text"
        android:layout_below="@id/top_text"
        android:layout_alignParentRight="true"
        android:textSize="@dimen/right_text_size"/>


    <TextView

        android:id="@+id/bottom_text"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/bottom_text"
        android:layout_below="@id/left_text"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/bottom_text_size"/>

    <EditText
        android:id="@+id/edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bottom_text"
        android:hint="@string/edit_text_hint"

        />

    <Button
        android:id="@+id/button_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_left"
        android:layout_alignParentBottom="true"
        android:onClick="leftClick"/>

    <Button
        android:id="@+id/button_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/button_right"

    />

    <ImageView
        android:id="@+id/img_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_text"
        android:src="@drawable/chocolate_chips"/>



</RelativeLayout>
